Ajout de la documentation française

--- a/template-fr.tex
+++ b/template-fr.tex
@@ -72,7 +72,7 @@
 		% Rédigez votre résumé français ici. 
 	\end{AEresume}
 
-	% Article's english abstract
+	% Résumé anglais de l'article
 	\begin{AEabstract}
 		% Rédigez votre résumé anglais ici.
 	\end{AEabstract}
