Ajout de la documentation anglaise

--- a/doc/documentation-fr.tex
+++ b/doc/documentation-fr.tex
@@ -17,7 +17,8 @@
 \definecolor{shadecolor}{rgb}{0.93,0.97,0.99}
 
 \frenchbsetup{%
-	og=«,fg=»
+	og=«,fg=»,
+	ItemLabels=\textbullet
 }
 
 \hypersetup{%
