--- a/template-fr.tex
+++ b/template-fr.tex
@@ -55,6 +55,8 @@
 \date{} % À LAISSER VIDE!
 
 % RÉVISEURS : SAISISSEZ VOTRE NOM ET VOS INITIALES
+% Vous pouvez insérer autant de \AEreviseur que ce qui
+% est nécessaire.
 \AEreviseur{Nom Complet}{initiales}
 
 \begin{document}
