--- a/template-en.tex
+++ b/template-en.tex
@@ -60,7 +60,9 @@
 % You can insert as many \author and \affil commands as
 % is necessary.
 
-\AEtitre{Article Title}
+% \AEtitre COMMAND BASIC SYNTAX
+% \AEtitre{title}{thanks}
+\AEtitre{Article Title}{\thanks{Delete this command if not needed.}}
 \author{First Author}
 \affil{First Author's Affiliation}
 \author{Second Author}
