--- a/template-fr.tex
+++ b/template-fr.tex
@@ -60,7 +60,9 @@
 % Vous pouvez insérer autant de \author et de \affil que
 % ce qui est nécessaire.
 
-\AEtitre{Titre de l'article}
+% FORMAT DE BASE DE LA COMMANDE \AEtitre
+% \AEtitre{titre}{remerciements}
+\AEtitre{Titre de l'article}{\thanks{Supprimez cette commande si elle n'est pas nécessaire.}}
 \author{Premier Auteur}
 \affil{Affiliation du premier auteur}
 \author{Deuxième Auteur}
