--- a/doc/documentation-en.tex
+++ b/doc/documentation-en.tex
@@ -155,9 +155,10 @@
 					\item Write your french and english \textbf{abstracts} in the \texttt{AEresume} and
 						\texttt{AEabstract} environments, making sure not to leave blank lines between
 						the \cmd{begin} and \cmd{end} commands and your abstract's text.
-					\item Write your \textbf{introduction}, your \textbf{main content} and your \textbf{conclusion} 
-						in their respective section, making sure not to delete the \dec{AEintroduction},
-						\dec{AEsectionsDeveloppement}, \dec{AEconclusion} and \dec{AEbibliographie} commands.
+					\item Write your \textbf{introduction}, your \textbf{main content}, your \textbf{conclusion} 
+						and your appendices in their respective section, 
+						making sure not to delete the \dec{AEintroduction},
+						\dec{AEsectionsDeveloppement}, \dec{AEconclusion}, \dec{AEannexe} and \dec{AEbibliographie} commands.
 					\item In your article's sectioning hierarchy, do not go beyond the subsubsection.
 				\end{itemize}
 			
