--- a/doc/documentation-fr.tex
+++ b/doc/documentation-fr.tex
@@ -159,9 +159,10 @@
 					\item Rédigez vos \textbf{résumés}  français et anglais dans les environnements \texttt{AEresume} et
 						\texttt{AEabstract} respectivement, sans laisser d'espaces entre les commandes \cmd{begin} et 
 						\cmd{end} et votre texte de résumé.
-					\item Rédigez votre \textbf{introduction}, votre \textbf{développement} et votre \textbf{conclusion} dans les sections prévues
+					\item Rédigez votre \textbf{introduction}, votre \textbf{développement}, votre \textbf{conclusion} 
+						et vos annexes dans les sections prévues
 						à cet effet en veillant à ne pas supprimer les commandes \dec{AEintroduction},
-						\dec{AEsectionsDeveloppement}, \dec{AEconclusion} et \dec{AEbibliographie}.
+						\dec{AEsectionsDeveloppement}, \dec{AEconclusion}, \dec{AEannexe} et \dec{AEbibliographie}.
 					\item Dans la hiérarchie du sectionnement de l'article, ne descendez pas plus bas que la sous-sous-section.
 				\end{itemize}
 			
