--- a/template-en.tex
+++ b/template-en.tex
@@ -136,6 +136,16 @@
 	\AEconclusion
 	
 		% Write your conclusion here.
+		
+	% Article's appendices
+	% Delete this section if you don't need it.
+	\AEannexe
+	
+		\section{An appendix section}
+		
+		\subsection{An appendix subsection}
+		
+		\subsubsection{An appendix subsubsection}
 							
 	% Bibliography
 	\AEbibliographie
