--- a/template-fr.tex
+++ b/template-fr.tex
@@ -138,6 +138,16 @@
 	\AEconclusion
 	
 		% Rédigez votre conclusion ici.
+		
+	% Annexes de l'article
+	% Supprimez cette section si vous n'en avez pas besoin.
+	\AEannexe
+	
+		\section{Une section de la section Annexe}
+		
+		\subsection{Une sous-section de la section Annexe}
+		
+		\subsubsection{Une sous-sous-section de la section Annexe}
 									
 	% Section bibliographie
 	\AEbibliographie
