--- a/template-en.tex
+++ b/template-en.tex
@@ -22,6 +22,7 @@
 
 % --------------------------------------------------- %
 % Journal article template for L'Actualité économique %
+% version: 1.1.2 (2019-03-18)						  %
 % --------------------------------------------------- %
 \documentclass[10pt,twoside,fleqn,french,english]{actuecon}
 
@@ -139,7 +140,7 @@
 		
 	% Article's appendices
 	% Delete this section if you don't need it.
-	\AEannexe
+	\AEappendix
 	
 		\section{An appendix section}
 		
