--- a/template-fr.tex
+++ b/template-fr.tex
@@ -22,6 +22,7 @@
 
 % ------------------------------------------------------ %
 % Gabarit d'article pour la revue L'Actualité économique %
+% version: 1.1.2 (2019-03-18)							 %
 % ------------------------------------------------------ %
 \documentclass[10pt,twoside,fleqn,english,french]{actuecon}
 
